Added Pet Repository

--- a/PetConnect.WebAPIs/appsettings.json
+++ b/PetConnect.WebAPIs/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "myDb": "Server=KALPITP-GIFT\\MSSQLSERVER2019;Database=PetConnect;User ID=sa;password=cybage@123456;TrustServerCertificate=true"
+    // "myDb": "Server=KALPITP-GIFT\\MSSQLSERVER2019;Database=PetConnect;User ID=sa;password=cybage@123456;TrustServerCertificate=true"
+    "myDb": "Server=(LocalDb)\\MSSQLLocalDB;Database=PetConnect;Trusted_Connection=true;TrustServerCertificate=true"
   }
 }
